# clothstore-ai

./: .gitignore  main.py  pyproject.toml
experiments/: mongo_db.ipynb  pydantic_experiments.ipynb
